--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-community": "^30.0.6",
     "ag-grid-react": "^30.0.6",
     "aos": "^2.3.4",
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
     "fslightbox-react": "^1.6.2-2",
@@ -38,7 +39,7 @@
     "react-dropzone": "^11.5.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
     "react-quilljs": "^1.3.0",
@@ -50,6 +51,7 @@
     "react-signature-pad-wrapper": "^3.1.1",
     "react-slider": "^2.0.1",
     "react-sortablejs": "^6.0.0",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "smooth-scrollbar": "^8.6.3",
